update spec  (#11)
